Lots of fixes (#5)
* Add an "Insert date and time" menu item, add a refresh button to the HTML Source Code window

* Move everything to the src folder to make project management easier

* Revert "Move everything to the src folder to make project management easier"

This reverts commit b1df1d14216f6202e73168c07d015b827898d745.

* Replace C-style comment with Java-style

* Replace C-style comment with Java-style, change the shape of combobox scrollbars a bit to match the rest of the (experimental) styles

* Get rid of some pretty nonsensical line breaks

* Get rid of some pretty nonsensical line breaks 2, reorganize FileIO class, rename SETTINGS_LOCATION to CONFIG_LOCATION (to match with CONFIG_VERSION)

* Move the toggleExperimentalUI method into "Other menu" group (what was it doing under "Info menu" in first place?)

* Additional cleanup of VersionData class

* Update README.md

* Update README.md

* Fix a typo in README.md

* Reorganize Styles.css

* Put more assignments onto one line in AboutController and HTMLSource

* Fix the line break in "Insert Script Alt Text" dialog

* Change the "Source code is available..." text

* Remove unnecessary temporary variables, clean up files

* Refactor Dialogs.java (remove unused variables, change parameters' names, etc), rename 2 fields in Controller.java and remove unused mainMenuBar field

* Join some multiline strings

* Fix a regression (accidentally split up the string)

* Fix weird gray lines between drop-down menu entries when using the experimental UI

* Style the opacity slider in options menu

* Improve the opacity slider track color

* Remove unused temporary Controller objects

* Remove redundant temporary string variable

* Use the maven build system for easier dependency management, add gitignore

* Load the license text from resources instead of hardcoding it

* Fix a regression

--- a/src/main/resources/Styles.css
+++ b/src/main/resources/Styles.css
@@ -1,8 +1,8 @@
 /* Main HTMLNotepadFX Style Sheet
    --------------------------------------
    This is an experimental version of the new user interface theme
-   for the HTMLNotepadFX. Many things are not done yet and most of
-   the more complicated UI components are broken.
+   for HTMLNotepadFX. Many things are not done yet and most of the
+   more advanced UI components are broken.
 */
 .root {
     -fx-background-color: #ffffff;
@@ -22,6 +22,17 @@
 .context-menu {
     -fx-background-color: #ffffff;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 15, 0, 0, 0);
+}
+
+/* opacity slider */
+.slider .thumb {
+    -fx-background-color: rgb(59, 146, 219);
+}
+
+.slider .track {
+    -fx-background-color: #ffffff;
+    -fx-background-radius: 0;
+    -fx-border-color: #cccccc;
 }
 
 /* buttons */
@@ -107,6 +118,26 @@
     -fx-background-color: #e9f3fb;
 }
 
+/* font combo boxes --> get rid of duplicated border */
+.bottom-toolbar .container .font-menu-button .list-cell:selected {
+    -fx-border-style: solid hidden solid solid;
+    -fx-border-color: #cccccc;
+}
+
+/* font combo boxes --> list component */
+.bottom-toolbar .container .font-menu-button .list-cell,
+.bottom-toolbar .container .font-menu-button .list-cell:disabled {
+    -fx-background-color: linear-gradient(to bottom, #ffffff, #f8f8f8);
+    -fx-border-radius: 0;
+}
+
+.bottom-toolbar .container .font-menu-button .list-view .virtual-flow .list-cell,
+.bottom-toolbar .container .font-menu-button .list-view .virtual-flow .clipped-container {
+    -fx-background-color: #ffffff;
+    -fx-border-color: #ffffff;
+}
+
+/* font combo boxes --> scrollbars */
 .bottom-toolbar .container .font-menu-button .arrow-button:pressed,
 .combo-box-popup .list-view .virtual-flow .clipped-container .sheet .list-cell:filled:hover,
 .bottom-toolbar .container .font-menu-button .list-view .virtual-flow .scroll-bar .thumb,
@@ -115,19 +146,9 @@
     -fx-background-radius: 0;
 }
 
-.bottom-toolbar .container .font-menu-button .list-cell,
-.bottom-toolbar .container .font-menu-button .list-cell:disabled {
-    -fx-background-color: linear-gradient(to bottom, #ffffff, #f8f8f8);
-    -fx-border-radius: 0;
-}
-
 .bottom-toolbar .container .font-menu-button .list-view .virtual-flow .scroll-bar,
 .web-view .scroll-bar {
     -fx-background-color: #f8f8f8;
-}
-
-.bottom-toolbar .container .font-menu-button .list-view .virtual-flow .list-cell {
-    -fx-background-color: #ffffff;
 }
 
 .combo-box-popup .list-view .virtual-flow .clipped-container .sheet .list-cell:filled:selected,
@@ -136,7 +157,7 @@
     -fx-background-color: rgb(59, 146, 219);
 }
 
-/* used to get rid of the blue line at the top */
+/* get rid of the weird blue line at the top */
 .html-editor {
     -fx-background-color: transparent;
 }
